--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -36,6 +36,12 @@ b {
   overflow: hidden;
 }
 
+// TEMP STYLE
+.no-scroll-with-margin {
+  overflow: hidden;
+  margin-right: 17px;
+}
+
 .txt-green {
   color: $green;
 }
