--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -53,7 +53,7 @@
   
 </div>
 </div>
-
+  <span class="wrap-input__message-single" *ngIf="!!statusMessage">{{statusMessage | translate}}</span>
 <button class="btn btn--active btn--center " (click)="onNextStep()">{{'Enable GA' | translate}}</button>
 <!--todo here we should fire popup if time of 5 minutes expires or smth went wrong-->
 </form>
