--- a/src/app/dashboard/components/markets/markets-item/markets-item.component.html
+++ b/src/app/dashboard/components/markets/markets-item/markets-item.component.html
@@ -14,7 +14,7 @@
     >
       <span
         class="table__row-star"
-        [ngClass]="{'table__row-star--select': isFavorite(pair)}"
+        [ngClass]="{'table__row-star--select': isFavorite}"
       >
         <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
