balance-mobile + Mark fix

--- a/src/app/dashboard/components/market-search/market-search.component.scss
+++ b/src/app/dashboard/components/market-search/market-search.component.scss
@@ -10,7 +10,14 @@
 .market-search__content{
 
 
+
 }
+@media(max-width: 1200px){
+  .market-search__top{
+      margin-top: 49px;
+    }
+}
+
 
 .market-search{
   height: 100%;
