--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -166,7 +166,7 @@
 
 
   <!-- TO DO move to separate component -->
-  <div class="widget__content widget__content--mob">
+  <div class="widget__content widget__content--mob button-fixed-block">
 
     <!-- app-currency-pair-info-mobile  start-->
     <app-currency-pair-info-mobile></app-currency-pair-info-mobile>
