--- a/src/app/funds/pending-request-mob/pending-request-mob.component.html
+++ b/src/app/funds/pending-request-mob/pending-request-mob.component.html
@@ -13,7 +13,7 @@
         </svg>
       </span>
     </div>
-    <div>
+    <div class="panding-input-wr">
       <app-dynamic-input
         [value]="currValue"
         [options]="(allCurrenciesForChoose$ | async) | dynamicIData: 'name': 'id'"
