--- a/src/app/dashboard/components/markets/markets.component.scss
+++ b/src/app/dashboard/components/markets/markets.component.scss
@@ -51,6 +51,9 @@
 
 .tab-no-active {
   border-bottom: 2px solid transparent;
+  @media(max-width: 1199px){
+        border: none;
+      }
 }
 
 //scroll style start
@@ -65,6 +68,7 @@
 .widget__content--mob ::ng-deep perfect-scrollbar > .ps.ps--active-y > .ps__rail-y {
   background: #bd3820;
   @media(max-width: 1200px) {
+    
     margin-right: 0;
     right: 5px!important;
     top: 5px!important;
@@ -90,8 +94,8 @@
 }
 
 .widget__markets-tabs {
-  position: fixed;
-  bottom: 46px;
+  // position: fixed;
+  // bottom: 46px;
   width: 100%;
   z-index: 1000;
 }
@@ -132,8 +136,15 @@
     background-color: rgba(35, 123, 239, 0.1);
   }
 }
-
+  .widget__tabs--mob{
+display: flex;
+    position: relative;
+    bottom: auto;
+}
 @media (min-width: 1200px) {
+  .widget__tabs--mob{
+display: none;
+}
   .markets {
     &__table {
       position: relative;
