--- a/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.html
+++ b/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.html
@@ -2,7 +2,7 @@
   <div class="order-book-part order-book-buy">
     <div class="table">
       <div class="tr">
-        <div class="td">{{'Buy' | translate}}</div>
+        <!-- <div class="td">{{'Buy' | translate}}</div> -->
         <div class="td">{{'Amount' | translate}}</div>
         <div class="td">{{'Price' | translate}}</div>
       </div>
@@ -11,7 +11,7 @@
         *ngFor="let item of showBuyDataReverse; let i = index"
         (click)="onSelectOrder(item)"
       >
-        <div class="td">{{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]}}</div>
+        <!-- <div class="td">{{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]}}</div> -->
         <div class="td">{{item.amount | roundCurrency | formatCurrency}}</div>
         <div class="td">{{item.total  | roundCurrency | formatCurrency}}</div>
         <div class="bg-bar" [style.width]="buyVisualizationArray[i] + '%'"></div>
@@ -23,7 +23,7 @@
         <div class="tr">
           <div class="td">{{'Price' | translate}}</div>
           <div class="td">{{'Amount' | translate}}</div>
-          <div class="td">{{'Sell' | translate}}</div>
+          <!-- <div class="td">{{'Sell' | translate}}</div> -->
         </div>
         <div
           class="tr"
@@ -32,7 +32,7 @@
         >
           <div class="td">{{item.total  | roundCurrency | formatCurrency}}</div>
           <div class="td">{{item.amount | roundCurrency | formatCurrency}}</div>
-          <div class="td">{{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]}}</div>
+          <!-- <div class="td">{{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]}}</div> -->
           <div class="bg-bar" [style.width]="sellVisualizationArray[i] + '%'"></div>
         </div>
     </div>
