--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -1,14 +1,14 @@
 <div class="trading-wr--mobile">
   <div class="row row--jcsb row--aic widget__trading-row">
     <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDropdownOpen}"
-        (mouseenter)="isDropdownOpen = true" (mouseleave)="isDropdownOpen = false">
-      <div class="dropdown__btn">{{showLimit(dropdownLimitValue)}}</div>
-      <ul class="dropdown__list">
-        <ng-template ngFor let-limit [ngForOf]="limitsData" , let-index = index>
-          <li class="dropdown__item" (click)="selectedLimit(limit)" *ngIf="limit !== dropdownLimitValue">{{showLimit(limit)}}</li>
-        </ng-template>
-      </ul>
-    </div>
+    (mouseenter)="isDropdownOpen = true" (mouseleave)="isDropdownOpen = false">
+    <div class="dropdown__btn">{{showLimit(dropdownLimitValue)}}</div>
+    <ul class="dropdown__list">
+      <ng-template ngFor let-limit [ngForOf]="limitsData" , let-index = index>
+        <li class="dropdown__item" (click)="selectedLimit(limit)" *ngIf="limit !== dropdownLimitValue">{{showLimit(limit)}}</li>
+      </ng-template>
+    </ul>
+  </div>
     <!-- <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
       <div style="margin-left: auto;">
         {{'Pay no fees:' | translate}}
@@ -76,7 +76,7 @@
           </span>
         </label>
       </div>
-      <button class="btn btn--active widget__trading-btn widget__trading-btn--buy" (click)="onSubmit(BUY)">Buy {{arrPairName[0]}}</button>
+      
     </form>
     <form class="widget__trading-form" action="" [formGroup]="sellForm">
       <div class="widget__trading-title-wr">
@@ -136,11 +136,15 @@
           </span>
         </label>
       </div>
-      <button class="btn btn--active widget__trading-btn widget__trading-btn--sell" (click)="onSubmit(SELL)">Sell {{arrPairName[0]}}</button>
+      
     </form>
 
   </div>
 
+</div>
+<div class="trade-buttons-wr">
+  <button class="btn btn--active widget__trading-btn widget__trading-btn--buy" (click)="onSubmit(BUY)">Buy {{arrPairName[0]}}</button>
+  <button class="btn btn--active widget__trading-btn widget__trading-btn--sell" (click)="onSubmit(SELL)">Sell {{arrPairName[0]}}</button>
 </div>
 
 <!-- trading mobile end -->
