--- a/src/app/dashboard/components/trading/trading.component.scss
+++ b/src/app/dashboard/components/trading/trading.component.scss
@@ -1,6 +1,9 @@
 :host {
   width: 100%;
 }
+.button-fixed-block{
+  padding-bottom: 90px;
+}
 .radio__input:checked{
   &+.radio__text{
     background-color: #237BEF;
