--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -214,6 +214,19 @@
     .tabs__item {
       &--active {
         border-top: 2px solid $darker-blue;
+        @media(max-width: 1199px){
+          border: none;
+          &:before{
+            display: none;
+          }
+          &:after{
+            width: 100%;
+            height: 2px;
+            background: #237BEF;
+            bottom: 0;
+            top: auto;
+          }
+        }
         border-bottom: 0;
         &:before, &:after {
           content: '';
@@ -463,7 +476,7 @@
   &__message-nickname {
     font-size: 12px;
     line-height: 14px;
-        color: #94C2FF;
+    color: #94C2FF;
     &--hide {
       display: none;
     }
@@ -1143,9 +1156,27 @@
       }
     }
     &__markets-tabs {
-      background-color: #21417D;
+      @media(max-width: 1199px){
+
+        background-color: #252543;
+      }
       .tabs__item {
         &--active {
+          @media(max-width: 1199px){
+          border: none;
+          &:before{
+            display: none;
+          }
+          &:after{
+            width: calc(100% + 18px);
+            height: 2px;
+            background: #237BEF;
+            bottom: 0;
+            top: auto;
+            border: none;
+
+          }
+        }
           &:after {
             border-color: transparent transparent #21417D transparent;
           }
@@ -1280,8 +1311,8 @@
 /*--- DARK THEME END---*/
 @media(max-width: 992px){
   .widget__graph{
-      height: calc(100% - 55px);
-    }
+    height: calc(100% - 55px);
+  }
 
   .wrap-input__currency{
     top: 1px;
@@ -1294,7 +1325,7 @@
       .widget__trading-btn{
         max-width: 140px;
         height: 40px;
-            margin: 5px auto 0;
+        margin: 5px auto 0;
       }
     }
   }
