fix mobile trading

--- a/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.scss
+++ b/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.scss
@@ -35,6 +35,9 @@
     @media(max-width: 568px){
         font-size: 11px;
       }
+      @media(max-width: 420px){
+        font-size: 9px;
+      }
   }
   .order-book-buy{
     padding-left: 10px;
