--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -1,6 +1,12 @@
 .dashboard-tools{
   display: none;
 }
+.curency-input{
+  .dynamic-input__wrap{
+    margin: 0!important;
+        margin-right: 16px!important;
+  }
+}
 /*--- media start ---*/
 @media (min-width:1200px) {
   .dashboard-tools{
