transfer view without logic

--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -180,6 +180,10 @@
     <app-trading-mobile></app-trading-mobile>
     <!-- app-trading-mobile end -->
 
+    <!--  app-embedded-orders-mobile start -->
+    <app-embedded-orders-mobile></app-embedded-orders-mobile>
+    <!--  app-embedded-orders-mobile end -->
+
   </div>
   <!--notif success start-->
   <div class="trading-notification trading-notification--success" *ngIf="notifySuccess">
