--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -147,7 +147,7 @@ perfect-scrollbar{
   }
   app-price-input {
     label {
-      background: #191A39 !important;
+      //background: #191A39 !important;
     }
   }
   &.wrap-input--error {
