task 1266 prevent input spaces

--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -14,6 +14,7 @@
           >
             <input
               required
+              appExcludeInputSpaces
               class="wrap-input__input"
               formControlName="email"
               [ngClass]="{'input--error': !emailForm.get('email').valid && emailForm.get('email').touched }"
