refactor gridster grid

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,15 +10,11 @@
                     [draggableOptions]="{ handlerClass: 'panel-heading' }">
 
         <ng-template ngFor let-widget [ngForOf]="widgets" , let-index=index>
-          <ngx-gridster-item [options]="gridsterItemOptions" *ngIf="showWidget(widget.type)"
-                             [(x)]="widget.x" [(y)]="widget.y" [(w)]="widget.w" [(h)]="widget.h"
-                             [(xSm)]="widget.xSm" [(ySm)]="widget.ySm" [(wSm)]="widget.wSm" [(hSm)]="widget.hSm"
-                             [(xMd)]="widget.xMd" [(yMd)]="widget.yMd" [(wMd)]="widget.wMd" [(hMd)]="widget.hMd"
+          <ngx-gridster-item [options]="gridsterItemOptions" *ngIf="widget.type | showWidgetPipe"
                              [(xLg)]="widget.xLg" [(yLg)]="widget.yLg" [(wLg)]="widget.wLg" [(hLg)]="widget.hLg"
-                             [(xXl)]="widget.xXl" [(yXl)]="widget.yXl" [(wXl)]="widget.wXl" [(hXl)]="widget.hXl"
                              [(dragAndDrop)]="widget.dragAndDrop" [(resizable)]="widget.resizable"
                              class="gridster-item">
-            <ng-template [ngTemplateOutlet]="loadWidgetTemplate(widget.type)"
+            <ng-template [ngTemplateOutlet]="widgetTemplate[widget.type]"
                          [ngTemplateOutletContext]="{ $implicit: index}">
             </ng-template>
           </ngx-gridster-item>
