fix cripto withdraw

--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -168,3 +168,17 @@ perfect-scrollbar{
   background-color: #237BEF;
   color: #fff;
 }
+
+// TEMP STYLE
+.btn {
+  &.btn--center {
+    color: #ffffff !important;
+    &.btn--empty-blue {
+      color: #237BEF !important;
+      &:hover {
+        background-color: transparent !important;
+        border: 1px solid #237BEF !important;
+      }
+    }
+  }
+}
