--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -7,6 +7,7 @@
       >
       <!-- [ngClass]="{'wrap-input--error': !currentPassword.valid && currentPassword.touched && currentPassword.errors != null}" -->
         <input
+          (input)="currentPasswordInput()"
           class="wrap-input__input"
           [type]="isPasswordCurrVisible ? 'text' : 'password'"
           formControlName="current_password"
@@ -54,9 +55,10 @@
     </div>
     <div class="settings__form-row">
       <div class="wrap-input wrap-input--fix230"
-           [ngClass]="{'wrap-input--error': !firstPassword.valid && firstPassword.touched && firstPassword.errors != null}"
+           [ngClass]="{'wrap-input--error': (!firstPassword.valid && firstPassword.touched && firstPassword.errors != null) && currentPassword.valid}"
       >
         <input
+          (input)="firstPasswordInput()"
           class="wrap-input__input"
           [type]="isPassword1Visible ? 'text' : 'password'"
           formControlName="password_1"
@@ -78,13 +80,13 @@
           >
             {{'Password field is required.' | translate}}
           </span> -->
-          <div class="input-hint-wrapper">
+          <div class="input-hint-wrapper" *ngIf="currentPassword.valid || !currentPassword.touched">
             <span
             class="wrap-input__message"
-            *ngIf="firstPassword.errors['passwordValidation'] ||
+            *ngIf="(firstPassword.errors['passwordValidation'] ||
                   firstPassword.errors['minlength'] ||
                   firstPassword.errors['required'] ||
-                  firstPassword.errors['maxlength']"
+                  firstPassword.errors['maxlength']) && currentPassword.valid"
           >
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
@@ -101,10 +103,10 @@
       <div
         class="wrap-input wrap-input--fix230"
         [ngClass]="{
-          'wrap-input--error': !secondPassword.valid &&
+          'wrap-input--error': (!secondPassword.valid &&
                                 secondPassword.touched &&
                                 secondPassword.errors != null &&
-                                secondPassword.errors['passwordsNotMatch']}"
+                                secondPassword.errors['passwordsNotMatch']) && firstPassword.valid}"
       >
         <input
           class="wrap-input__input"
@@ -128,7 +130,7 @@
           >
             {{'Password field is required.' | translate}}
           </span> -->
-          <div class="input-hint-wrapper">
+          <div class="input-hint-wrapper" *ngIf="(currentPassword.valid && firstPassword.valid)">
             <span
             class="wrap-input__message"
             *ngIf="secondPassword.errors['passwordsNotMatch'] "
