--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -181,12 +181,16 @@
 <!-- HEADER MOBILE START-->
 <header class="header-mob" [ngClass]="{'header-mob--open': isMobileMenuOpen }">
   <div class="header-mob__top">
+
     <div
       [ngClass]="{'header-mob__burger-content': !isMobileMenuOpen, 'header-mob__burger-content--open': isMobileMenuOpen }">
+      <div class="mobile-title">
+        <h3>Account</h3>
+      </div>
       <div class="header-mob__controls-row">
-        <a class="header-mob__controls-btn" (click)="tempPopup()">
+        <!-- <a class="header-mob__controls-btn" (click)="tempPopup()">
           <img class="header-mob__controls-icon" src="../../assets/img/header-mob-settings.svg">
-        </a>
+        </a> -->
       </div>
 
 
