--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -101,7 +101,7 @@
       </span>
     </td>
     <td class="table__cell">
-      <span>{{item.status}}</span>
+      <span>{{item.status === 'CLOSED' ? 'Filled' : item.status}}</span>
     </td>
   </tr>
 
