return back to perfect-scrollbar and isFavorite pipe

--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -136,7 +136,7 @@
               *ngFor="let pair of (pairs | currencySort :'currencyVolume'); trackBy: trackByFn"
               [pair]="pair"
               [isFiat]="isFiat"
-              [isFavorite]="getIsFavorite(pair.currencyPairId)"
+              [isFavorite]="pair | isFavoritePipe: userFavorites"
               [currentCurrencyPair]="currentCurrencyPair"
             >
             </app-markets-item>
